--- a/frontend/smartHouseFront/src/components/joinhouse/joinhouse.component.scss
+++ b/frontend/smartHouseFront/src/components/joinhouse/joinhouse.component.scss
@@ -1,58 +1,63 @@
-.signup-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background-image: url('/assets/home.jpg');
-  background-size: cover;
-  background-position: center;
 
-  .signup-box {
+.login-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-image: url("/assets/sign.jpg");
+    background-size: cover;
+    background-position: center;
+  
+  }
+  
+  .login-box {
     background-color: rgba(255, 255, 255, 0.8);
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     padding: 40px;
     width: 400px;
-
-    .signup-title {
+  
+  
+    .login-title {
       font-size: 24px;
       font-weight: 600;
-      margin-bottom: 10px;
+      margin-bottom: 20px;
       color: #0D47A1;
+      font-family: 'Roboto', sans-serif;
     }
-
+  
     h2 {
       font-size: 18px;
       margin-bottom: 30px;
       color: #666;
     }
-
+  
+    
     .form-group {
       margin-bottom: 20px;
-
+  
       input {
         width: 100%;
         padding: 12px 16px;
         border: 1px solid #ccc;
         border-radius: 4px;
         font-size: 16px;
-
+  
         &::placeholder {
           color: #999;
         }
       }
-
+  
       .form-check {
         display: inline-block;
         margin-right: 20px;
-
+  
         .form-check-input {
           margin-right: 8px;
         }
       }
-
-      .signup-button {
-        //background-color: #0D47A1;
+  
+      .login-button {
         color: #fff;
         border: none;
         border-radius: 4px;
@@ -67,53 +72,28 @@
          background-color: #31475c;
      
          margin-top: 1rem;
-
+  
         &:hover {
           background-color: #1565C0;
         }
       }
     }
-
-    .redirect {
-      font-size: 14px;
-      text-align: center;
-      margin-top: 20px;
-
-      a {
-        color: #0D47A1;
-        text-decoration: none;
-
-        &:hover {
-          text-decoration: underline;
+  
+  
+  }
+  
+      .redirect {
+        font-size: 14px;
+        text-align: center;
+        margin-top: 20px;
+  
+        a {
+          color: #0D47A1;
+          text-decoration: none;
+  
+          &:hover {
+            text-decoration: underline;
+          }
         }
       }
-    }
-  }
-}
-
-
-.password-container {
-  position: relative;
-}
-
-.toggle-button {
-  position: absolute;
-  top: 50%;
-  right: 10px;
-  transform: translateY(-50%);
-  background: none;
-  border: none;
-  color: #007bff;
-  font-size: 14px;
-  cursor: pointer;
-}
-
-.toggle-button:hover {
-  text-decoration: underline;
-}
-.signup-container .signup-box .form-group div[ngIf] {
-  font-size: 12px;
-  color: #dc3545 !important; 
-  margin-top: 5px;
-  text-align: left;
-}
+  
