--- a/frontend/smartHouseFront/src/components/sidebar/sidebar.component.html
+++ b/frontend/smartHouseFront/src/components/sidebar/sidebar.component.html
@@ -67,7 +67,7 @@
         <i class="bi bi-people icon"></i>
         <span>Users</span>
       </a>
-      <a routerLink="/reports" [class.active]="currentRoute === '/reports'">
+      <a href="/reports" [class.active]="currentRoute === '/reports'">
         <i class="bi bi-file-earmark-text icon"></i>
         <span>Reports</span>
       </a>
@@ -75,7 +75,7 @@
         <i class="bi bi-bell"></i>
         <span>Notifications</span>
       </a>
-      <a routerLink="/logout" [class.active]="currentRoute === '/logout'">
+      <a href="/logout" [class.active]="currentRoute === '/logout'">
         <i class="bi bi-box-arrow-left"></i>
         <span>Logout</span>
       </a>
