--- a/frontend/smartHouseFront/src/components/welcome-page/welcome-page.component.html
+++ b/frontend/smartHouseFront/src/components/welcome-page/welcome-page.component.html
@@ -1,4 +1,4 @@
- <div class="welcome-container">
+ <!-- <div class="welcome-container">
     <header class="header">
       <div class="logo">SMARTHOUSE</div>
       <nav class="nav">
@@ -23,4 +23,26 @@
 
 
 
-  
+   -->
+
+
+   <!-- welcome.component.html -->
+<div class="welcome-container">
+  <div class="welcome-box">
+    <div class="welcome-header">
+      <div>      <a href="/join" class="logo">Join House</a>
+      </div>
+      <div class="nav">
+        <a href="/signup" class="btn">Sign up</a>
+        <a href="/login" class="btn primary">Sign in</a>
+      </div>
+    </div>
+    <div class="welcome-content">
+      <div class="text-content">
+        <h1>SMART HOUSE<br>SECURITY SYSTEM</h1>
+        <p>Make Your Life More Secure. Monitor Your House From Your Phone With Easy Clicks.</p>
+      </div>
+    
+    </div>
+  </div>
+</div>
