--- a/frontend/smartHouseFront/src/components/dashboard/dashboard.component.html
+++ b/frontend/smartHouseFront/src/components/dashboard/dashboard.component.html
@@ -26,7 +26,10 @@
           <i class="bi bi-plus"></i>Add Room
         </button>
       </div>
-      <app-room></app-room>
+      <!-- <app-room></app-room> -->
+      <ng-container *ngIf="rooms$ | async as rooms">
+        <app-room [rooms]="rooms"></app-room>
+      </ng-container>
     </div>
   </div>
 </div>
