--- a/frontend/smartHouseFront/src/components/navbar/navbar.component.html
+++ b/frontend/smartHouseFront/src/components/navbar/navbar.component.html
@@ -29,7 +29,9 @@
 
 <nav class="navbar">
   <div class="search-bar">
-    <input type="text" placeholder="Search..." />
+    <!-- <input type="text" placeholder="Search..." /> -->
+    <span>House Code: {{userInfo?.code}}</span>
+
   </div>
   <div class="user-info">
     <span>{{userInfo?.username}}</span>
