--- a/frontend/smartHouseFront/src/components/signin/signin.component.html
+++ b/frontend/smartHouseFront/src/components/signin/signin.component.html
@@ -1,22 +1,48 @@
-<div class="signin-container">
-    <div class="form-section">
-      <h1>Welcome Back !</h1>
-      <!-- <form> -->
-      <form [formGroup]="signinForm" (ngSubmit)="onSignIn()">
-        <div class="form-group">
-          <label for="username">Username</label>
-          <input type="text" id="username" formControlName="username" placeholder="Enter your username" />
+<!-- 
+<div class="login-container">
+  <div class="login-box">
+    <h1 class="login-title">Login</h1>
+    <h2>Welcome Back !</h2>
+    <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
+      <div class="form-group">
+        <input type="text" formControlName="username" placeholder="Username" />
+      </div>
+      <div class="form-group">
+        <input type="password" formControlName="password" placeholder="Password" />
+      </div>
+      <div class="form-group">
+        <button type="submit" class="login-button">Login</button>
+      </div>
+     
+    </form>
+   
+  </div>
+</div> -->
+
+
+<div class="login-container">
+  <div class="login-box">
+    <h1 class="login-title">Login</h1>
+    <h2>Welcome Back!</h2>
+    <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
+      <div class="form-group">
+        <input type="text" formControlName="username" placeholder="Username" />
+        <div *ngIf="loginForm.get('username')?.invalid && (loginForm.get('username')?.dirty || loginForm.get('username')?.touched)">
+          <div *ngIf="loginForm.get('username')?.errors?.['required']" class="error-message"style="color: #dc3545">Username is required.</div>
         </div>
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" id="password" formControlName="password" placeholder="Enter your password" />
+      </div>
+      <div class="form-group">
+        <input type="password" formControlName="password" placeholder="Password" />
+        <div *ngIf="loginForm.get('password')?.invalid && (loginForm.get('password')?.dirty || loginForm.get('password')?.touched)">
+          <div *ngIf="loginForm.get('password')?.errors?.['required']" class="error-message"style="color: #dc3545">Password is required.</div>
         </div>
-        <button type="submit" class="signin-btn">Sign In</button>
-      </form>
-    </div>
-  
-    <div class="image-section">
-      <img src="/assets/signin.png" alt="Sign Up Illustration" />
+      </div>
+      <div class="form-group">
+        <button type="submit" class="login-button" [disabled]="loginForm.invalid">Sign In</button>
+      </div>
+    </form>
+    <div class="redirect">
+       <a href="/signup">SignUp</a>
     </div>
   </div>
-  
+</div>
