--- a/frontend/smartHouseFront/src/components/dashboard/dashboard.component.scss
+++ b/frontend/smartHouseFront/src/components/dashboard/dashboard.component.scss
@@ -14,10 +14,14 @@
 }
 
 .main-container {
-  display: flex;
-  flex: 1;
+  background-image: url('/assets/housse.jpg');
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100%;
+  /* Retirer flex pour ne pas affecter la taille du background */
+  display: block; /* Utiliser display block pour ne pas forcer flex */
 }
-
 .app-sidebar {
   flex-shrink: 0;
 }
@@ -26,6 +30,7 @@
   flex: 1;
   padding: 20px;
   transition: margin-left 0.3s;
+
 }
 
 .add-room-section {
@@ -67,6 +72,21 @@
 
   .main-content {
     margin-left: 0 !important;
+
   }
 }
 
+
+
+/* Shadow overlay */
+//   .dynamic-bg::after {
+//     content: '';
+//     position: fixed; /* Fix the shadow overlay position */
+//     top: 0;
+//     left: 0;
+//     width: 100vw; /* Ensure it covers the full viewport */
+//     height: 100vh;
+//     background: rgba(0, 0, 0, 0.5);
+//     z-index: 1; /* Ensure it stays on top of the background image */
+//     pointer-events: none; /* Allow interaction with other elements below */
+// }
