--- a/frontend/smartHouseFront/src/components/joinhouse/joinhouse.component.scss
+++ b/frontend/smartHouseFront/src/components/joinhouse/joinhouse.component.scss
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-image: url("/assets/sign.jpg");
+    background-image: url("/assets/join.jpg");
     background-size: cover;
     background-position: center;
   
