--- a/frontend/smartHouseFront/src/components/signin/signin.component.scss
+++ b/frontend/smartHouseFront/src/components/signin/signin.component.scss
@@ -173,11 +173,12 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-image: url("/assets/sign.jpg");
+  background-image: url('/assets/devices.jpg');
   background-size: cover;
   background-position: center;
 
 }
+
 
 .login-box {
   background-color: rgba(255, 255, 255, 0.8);
