--- a/frontend/smartHouseFront/src/components/welcome-page/welcome-page.component.html
+++ b/frontend/smartHouseFront/src/components/welcome-page/welcome-page.component.html
@@ -39,8 +39,8 @@
     </div>
     <div class="welcome-content">
       <div class="text-content">
-        <h1>SMART HOUSE<br>SECURITY SYSTEM</h1>
-        <p>Make Your Life More Secure. Monitor Your House From Your Phone With Easy Clicks.</p>
+        <h1>SMART HOUSE<br>Monitor SYSTEM</h1>
+        <p>Make Your Life Easier. Monitor Your House From Your Device With Simple Clicks.</p>
       </div>
     
     </div>
