--- a/frontend/smartHouseFront/src/components/sidebar/sidebar.component.html
+++ b/frontend/smartHouseFront/src/components/sidebar/sidebar.component.html
@@ -59,10 +59,10 @@
         <i class="bi bi-house-door icon"></i>
         <span>Home</span>
       </a>
-      <a routerLink="/devices" [class.active]="currentRoute === '/devices'">
+      <!-- <a routerLink="/devices" [class.active]="currentRoute === '/devices'">
         <i class="bi bi-phone-vibrate"></i>
         <span>Devices</span>
-      </a>
+      </a> -->
       <a href="/users" [class.active]="currentRoute === '/users'">
         <i class="bi bi-people icon"></i>
         <span>Users</span>
@@ -71,10 +71,10 @@
         <i class="bi bi-file-earmark-text icon"></i>
         <span>Reports</span>
       </a>
-      <a routerLink="/notifications" [class.active]="currentRoute === '/notifications'">
+      <!-- <a routerLink="/notifications" [class.active]="currentRoute === '/notifications'">
         <i class="bi bi-bell"></i>
         <span>Notifications</span>
-      </a>
+      </a> -->
       <a href="/logout" [class.active]="currentRoute === '/logout'">
         <i class="bi bi-box-arrow-left"></i>
         <span>Logout</span>
