--- a/frontend/smartHouseFront/src/components/users/users.component.html
+++ b/frontend/smartHouseFront/src/components/users/users.component.html
@@ -85,8 +85,8 @@
           <p>Are you sure you want to delete this user?</p>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-danger" (click)="deleteUser()">Delete</button>
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-custom" (click)="deleteUser()">Delete</button>
+          <button type="button" class="btn btn-custom2" data-bs-dismiss="modal">Cancel</button>
         </div>
       </div>
     </div>
